[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.3.0"


[[bin]]
name = "day1"
path = "src/day1/day1pt1.rs"

[[bin]]
name = "day1pt2"
path = "src/day1/day1pt2.rs"

[[bin]]
name = "day2"
path = "src/day2/day2.rs"